MAT-6257: Change to return measureList and use facets